--- a/navbar/style.css
+++ b/navbar/style.css
@@ -3,7 +3,7 @@
 :root {
     --primary-color: #d45d79;
     --hamburger-color: white;
-    --header-height: 85px;
+    --header-height: 50px;
 }
 
 * {
@@ -14,11 +14,12 @@
 
 body {
     font-family: Roboto, sans-serif;
+    overflow: hidden;
 }
 
 .wrapper {
-    width: 720px;
-    height: 1080px;
+    width: 100%;
+    height: 100vh;
     /* margin: 0 auto; */
 }
 
