--- a/navbar/hamburger.css
+++ b/navbar/hamburger.css
@@ -28,7 +28,7 @@
 .hamburger > div:after {
     content: '';
     position: absolute;
-    top: -12px;
+    top: calc(-1 * var(--hamburger-size));
     background-color: var(--hamburger-color);
     width: 100%;
     height: 2px;
@@ -36,7 +36,7 @@
 }
 
 .hamburger > div:after {
-    top: 12px;
+    top: var(--hamburger-size);
 }
 
 #toggler {
